fix: rank button align only with css and improve animation

--- a/src/main/style/atom/button/button-toggle/_button-toggle.scss
+++ b/src/main/style/atom/button/button-toggle/_button-toggle.scss
@@ -56,15 +56,18 @@ $jhlite-button-toggle-transition-duration: 0.5s;
 
 .jhlite-button-toggle-short-name {
   display: inline-block;
-  transition: all $jhlite-button-toggle-transition-duration ease-out;
+  transition:
+    max-width $jhlite-button-toggle-transition-duration 500ms ease-in,
+    opacity $jhlite-button-toggle-transition-duration 1ms ease-in;
   opacity: 1;
+  max-width: 300px;
   white-space: nowrap;
 }
 
 .jhlite-button-toggle-full-name {
   display: inline-block;
   transition:
-    opacity $jhlite-button-toggle-transition-duration 1ms ease-out,
+    opacity 1ms 1ms ease-out,
     max-width $jhlite-button-toggle-transition-duration 1ms ease-out;
   opacity: 0;
   max-width: 0;
@@ -75,7 +78,9 @@ $jhlite-button-toggle-transition-duration: 0.5s;
 .jhlite-button-toggle:hover,
 .jhlite-button-toggle.-active {
   .jhlite-button-toggle-short-name {
+    transition: max-width 500ms 1ms ease-out;
     opacity: 0;
+    max-width: 0;
   }
 
   .jhlite-button-toggle-full-name {
